:libstick: update : CodeMirror's height to 250px

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -164,6 +164,10 @@ main {
   padding: 5px;
 }
 
+.CodeMirror {
+  height: 250px !important;
+}
+
 /**
  * Buttons
  */
@@ -186,7 +190,6 @@ main {
 
 .errors {
   padding: 10px;
-  background-color: tomato;
-  color: white;
+  color: #333;
   text-decoration: underline;
 }
