--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -74,6 +74,20 @@ h6,
   bottom: 0;
   left: 0;
   z-index: 100;
+  list-style: none;
+  padding: 0;
+  padding-left: 10px;
+  margin: 0;
+  li  {
+    padding: 5px;
+  }
+
+  a i {
+    color: #333;
+  }
+  a:hover i {
+    color: #082736;
+  }
 }
 
 /**
