--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -123,10 +123,15 @@ main {
   min-width: 35rem;
   max-width: 60%;
   background: rgba(255, 255, 255, .9);
+
+  &::after {
+    display: block;
+  }
 }
 
 .post-content {
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 4vw;
   margin-bottom: 10px;
 }
@@ -143,10 +148,23 @@ main {
       }
     }
   }
+}
 
-  pre {
-    background-color: black;
-    color: white;
+.post aside {
+  height: 35px;
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+
+  a {
+    border-top: 2px solid #f4994b;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-top: 5px;
+    flex: 1;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #333;
   }
 }
 
@@ -176,14 +194,6 @@ main {
   width: 100%;
   font-size: 1.2em;
   padding: 5px;
-}
-
-.CodeMirror {
-  height: 250px !important;
-}
-
-.CodeMirror.cm-s-paper {
-  height: 100% !important;
 }
 
 /**
