--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -157,13 +157,14 @@ main {
   justify-content: space-around;
 
   a {
-    border-top: 2px solid #f4994b;
+    border-top: 2px solid #45aaf2;
     margin-left: 5px;
     margin-right: 5px;
     padding-top: 5px;
     flex: 1;
     text-transform: uppercase;
     text-decoration: none;
+    font-weight: lighter;
     color: #333;
   }
 }
