:lipstick: update : media query for site navigation and post sections

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -222,3 +222,22 @@ main {
   color: #333;
   text-decoration: underline;
 }
+
+/**
+ *  Media Queries
+ */
+ @media screen and (max-width: 800px) {
+  .site-nav {
+    display: flex;
+    background-color: #fff;
+  }
+
+  .post section {
+    max-width: none;
+    min-width: 0;
+
+    .post-content.copy {
+      font-size: 0.8em;
+    }
+  }
+ }
