--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -182,6 +182,11 @@ main {
   font-size: 1em;
   font-style: italic;
   text-align: right;
+
+  a {
+    text-decoration: none;
+    color: #333;
+  }
 }
 
 /**
@@ -197,6 +202,27 @@ main {
   padding: 5px;
 }
 
+/**
+ *  User Registration, Session
+ */
+section.user-page {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 3vw;
+  justify-content: center;
+
+  div.user-page-form {
+    flex: 0 1 auto;
+    box-sizing: border-box;
+    min-width: 35rem;
+    max-width: 60%;
+    background: rgba(255, 255, 255, .9);
+    padding: 4vw;
+    &::after {
+      display: block;
+    }
+  }
+}
 /**
  * Buttons
  */
